--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Olav Cleemann",
   "license": "ISC",
   "devDependencies": {
-    "elm": "^0.19.0-no-deps",
+    "elm": "^0.19.1",
     "elm-live": "^4.0.1"
   }
 }
